# conference

./: .env.example  .gitleaks.toml  .pre-commit-config.yaml  .secrets.baseline  docker-compose.dev.yaml  docker-compose.prod.yaml  docker-compose.yaml  pyproject.toml
.github/rulesets/: protect-dev.json  protect-main.json
.github/workflows/: build-and-push.yml  cd.yml  ci.yml  docker.yml
cli/conference/: main.py
cli/idp/: main.py
configs/: base.yaml  example.yaml
database/schema/: conference.sql
docker/: Dockerfile
migrations/: env.py
migrations/versions/: 5b1324341fac_add_revoked_to_participation.py  602defcad4bf_add_conferences_participations_.py  db2b7a2b032a_init_idp.py
src/bootstrap/: config.py
src/common/application/: exceptions.py
src/common/domain/: exceptions.py
src/common/domain/interfaces/: clock.py  uuid_generator.py
src/common/domain/value_objects/: datetime.py
src/common/infrastructure/app/: app.py  http_app.py  iapp.py
src/conference/conference/application/: exceptions.py
src/conference/participant/application/: exceptions.py
src/identity/application/: exceptions.py
src/identity/application/read_models/: user_read_model.py
src/identity/application/services/: identity_service.py
src/identity/domain/entity/: identity.py  user.py
src/identity/domain/factories/: identity_factory.py  user_factory.py
src/identity/domain/interfaces/: identity_factory.py  user_factory.py
src/idp/auth/application/: exceptions.py
src/idp/identity/application/: exceptions.py
src/sso/domain/entity/: identity.py
src/sso/domain/factories/: identity_factory.py
src/sso/domain/interfaces/: identity_factory.py
src/user/domain/entity/: user.py
src/user/domain/factories/: user_factory.py
src/user/domain/interfaces/: user_factory.py
tests/common/domain/value_objects/: test_datetime.py
tests/integration/conference/: conftest.py
(+286 files in other folders)
